Added almost Tested Map class