@@ -1,107 +1,112 @@
 package com.boracompany.mygame.ORM;
 
-import java.net.URL;
-import java.util.List;
-import java.util.Properties;
-
 import javax.persistence.SharedCacheMode;
 import javax.persistence.ValidationMode;
 import javax.persistence.spi.ClassTransformer;
 import javax.persistence.spi.PersistenceUnitInfo;
 import javax.persistence.spi.PersistenceUnitTransactionType;
 import javax.sql.DataSource;
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Properties;
 
 public class HibernatePersistenceUnitInfo implements PersistenceUnitInfo {
 
-	private final String persistenceUnitName;
-	private final List<String> managedClassNames;
+    private final String persistenceUnitName;
+    private final List<String> managedClassNames;
 
-	public HibernatePersistenceUnitInfo(String persistenceUnitName, Class<?>... managedClasses) {
-		this.persistenceUnitName = persistenceUnitName;
-		this.managedClassNames = List.of(managedClasses).stream().map(Class::getName).toList();
-	}
+    public HibernatePersistenceUnitInfo(String persistenceUnitName, Class<?>... managedClasses) {
+        this.persistenceUnitName = persistenceUnitName;
+        this.managedClassNames = new ArrayList<>();
+        for (Class<?> managedClass : managedClasses) {
+            this.managedClassNames.add(managedClass.getName());
+        }
+    }
 
-	@Override
-	public String getPersistenceUnitName() {
-		return persistenceUnitName;
-	}
+    @Override
+    public String getPersistenceUnitName() {
+        return persistenceUnitName;
+    }
 
-	@Override
-	public String getPersistenceProviderClassName() {
-		return "org.hibernate.jpa.HibernatePersistenceProvider";
-	}
+    @Override
+    public String getPersistenceProviderClassName() {
+        return "org.hibernate.jpa.HibernatePersistenceProvider";
+    }
 
-	@Override
-	public PersistenceUnitTransactionType getTransactionType() {
-		return PersistenceUnitTransactionType.RESOURCE_LOCAL;
-	}
+    @Override
+    public PersistenceUnitTransactionType getTransactionType() {
+        return PersistenceUnitTransactionType.RESOURCE_LOCAL;
+    }
 
-	@Override
-	public DataSource getJtaDataSource() {
-		return null;
-	}
+    @Override
+    public DataSource getJtaDataSource() {
+        return null;
+    }
 
-	@Override
-	public DataSource getNonJtaDataSource() {
-		return null;
-	}
+    @Override
+    public DataSource getNonJtaDataSource() {
+        return null;
+    }
 
-	@Override
-	public List<String> getMappingFileNames() {
-		return List.of();
-	}
+    @Override
+    public List<String> getMappingFileNames() {
+        return Collections.emptyList();
+    }
 
-	@Override
-	public List<URL> getJarFileUrls() {
-		return List.of();
-	}
+    @Override
+    public List<URL> getJarFileUrls() {
+        return Collections.emptyList();
+    }
 
-	@Override
-	public URL getPersistenceUnitRootUrl() {
-		return null;
-	}
+    @Override
+    public URL getPersistenceUnitRootUrl() {
+        return null;
+    }
 
-	@Override
-	public List<String> getManagedClassNames() {
-		return managedClassNames;
-	}
+    @Override
+    public List<String> getManagedClassNames() {
+        return managedClassNames;
+    }
 
-	@Override
-	public boolean excludeUnlistedClasses() {
-		return false;
-	}
+    @Override
+    public boolean excludeUnlistedClasses() {
+        return false;
+    }
 
-	@Override
-	public SharedCacheMode getSharedCacheMode() {
-		return SharedCacheMode.NONE;
-	}
+    @Override
+    public SharedCacheMode getSharedCacheMode() {
+        return SharedCacheMode.NONE;
+    }
 
-	@Override
-	public ValidationMode getValidationMode() {
-		return ValidationMode.AUTO;
-	}
+    @Override
+    public ValidationMode getValidationMode() {
+        return ValidationMode.AUTO;
+    }
 
-	@Override
-	public Properties getProperties() {
-		return new Properties();
-	}
+    @Override
+    public Properties getProperties() {
+        return new Properties();
+    }
 
-	@Override
-	public String getPersistenceXMLSchemaVersion() {
-		return "2.2";
-	}
+    @Override
+    public String getPersistenceXMLSchemaVersion() {
+        return "2.2";
+    }
 
-	@Override
-	public ClassLoader getClassLoader() {
-		return getClass().getClassLoader();
-	}
+    @Override
+    public ClassLoader getClassLoader() {
+        return getClass().getClassLoader();
+    }
 
-	@Override
-	public void addTransformer(ClassTransformer transformer) {
-	}
+    @Override
+    public void addTransformer(ClassTransformer transformer) {
+        // No-op
+    }
 
-	@Override
-	public ClassLoader getNewTempClassLoader() {
-		return getClass().getClassLoader();
-	}
+    @Override
+    public ClassLoader getNewTempClassLoader() {
+        return getClass().getClassLoader();
+    }
 }
